// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberOfItems Renders correct if numberOfItems less than 4 1`] = `
<styled.p
  numberOfItems={0}
>
  В корзине: 
  <b>
    3 товара
  </b>
</styled.p>
`;

exports[`NumberOfItems Renders correct if numberOfItems more than 4 1`] = `
<styled.p
  numberOfItems={0}
>
  В корзине: 
  <b>
    5 товаров
  </b>
</styled.p>
`;
